# tevildo

./: .env.example  .tevildo.example  README.md  completer.py  pyproject.toml  requirements.txt  tevildo.py
.github/workflows/: main.yml
tevildo/: cli.py  completer.py
